fix field display on mobile + add transparent background

--- a/site/src/pages/mediaPage.css
+++ b/site/src/pages/mediaPage.css
@@ -51,4 +51,8 @@
   #map-wrapper{
     width: 80% !important;
   }
+
+  #field{
+    width: 100% !important;
+  }
 }
